# mmDoppler

./: .gitignore  README.md  main.py  pyproject.toml
data/raw_datasets/singleuser/: user3_sitting_2_r.txt  user5_clapping_2_2.txt  user5_clapping_2_n.txt  user5_clapping_pc_1_sc.txt  user5_clapping_pc_2.txt  user5_clapping_sc_pc_2.txt  user5_clapping_sc_pc_3.txt  user5_eating_food_3_sc_pc.txt  user5_eating_food_sc_pc_1.txt  user5_eating_food_sc_pc_2.txt  user5_jumping_sc_pc_1.txt  user5_jumping_sc_pc_2.txt  user5_jumping_sc_pc_3.txt  user5_laptop_typing_sc_pc_1.txt  user5_laptop_typing_sc_pc_2.txt  user5_lnges_sc_pc_2.txt  user5_lunges_sc_pc_1.txt  user5_lunges_sc_pc_3.txt  user5_phone_talking_sc_pc_2.txt  user5_phone_talking_sc_pc_3.txt  user5_phone_typing_sc_pc_2.txt  user5_phone_typing_sc_pc_3.txt  user5_phoone_talking_sc_pc_1.txt  user5_playing_guitar_sc_pc_1.txt  user5_playing_guitar_sc_pc_2.txt  user5_running_ccw_sc_pc.txt  user5_running_cw_sc_pc.txt  user5_squats_sc_pc_1.txt  user5_squats_sc_pc_2.txt  user5_squats_sc_pc_3.txt  user5_walking_cw_sc_pc.txt  user5_waving_sc_pc_1.txt  user5_waving_sc_pc_2.txt  user5_waving_sc_pc_3.txt  user7_clapping_1.txt
helper/: analysis_utils.py  gdrive_downloader.py  outlier_detector.py  preprocess_utils.py
notebooks/: 01_analyze_doppler.ipynb  01_preprocess.ipynb  02_analyze.ipynb  03_modeling.ipynb
scripts/: process_data.py  rerun_duration_analysis.py
