[project]
name = "mmdoppler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.4.0",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0",
]
